fix: corrige desbordamiento horizontal causado por el scrollbar vertical

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ body,
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
